--- a/app/src/main/res/layout/fragment_game_ui.xml
+++ b/app/src/main/res/layout/fragment_game_ui.xml
@@ -24,17 +24,6 @@
         android:layout_margin="16dp"
         android:src="@mipmap/ic_flash_on_white_18dp" />
 
-    <TextView
-        android:id="@+id/textP"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right|bottom"
-        android:layout_marginBottom="30dp"
-        android:layout_marginEnd="72dp"
-        android:background="@color/colorAccent"
-        android:padding="2dp"
-        android:text="0" />
-
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -82,9 +71,9 @@
         <ProgressBar
             android:id="@+id/progressBoth"
             style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="280dp"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/textWalk"
+            android:layout_width="wrap_content"
+            android:layout_height="18dp"
+            android:layout_alignParentTop="true"
             android:layout_gravity="right|top"
             android:layout_toStartOf="@+id/textView"
             android:max="500" />
@@ -92,9 +81,9 @@
         <ProgressBar
             android:id="@+id/progressWalk"
             style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="280dp"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/textRun"
+            android:layout_width="wrap_content"
+            android:layout_height="19dp"
+            android:layout_below="@+id/progressBoth"
             android:layout_gravity="right|top"
             android:layout_toStartOf="@+id/textWalk"
             android:max="500" />
@@ -102,12 +91,12 @@
         <ProgressBar
             android:id="@+id/progressRun"
             style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="280dp"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/textRun"
+            android:layout_width="wrap_content"
+            android:layout_height="19dp"
             android:layout_gravity="right|top"
-            android:layout_toStartOf="@+id/textRun"
-            android:max="2500" />
+            android:max="2500"
+            android:layout_below="@+id/progressWalk"
+            android:layout_toStartOf="@+id/textRun" />
 
         <TextView
             android:id="@+id/textView"
@@ -144,5 +133,17 @@
             android:textAlignment="center" />
 
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/textP"
+        android:layout_width="36dp"
+        android:layout_height="32dp"
+        android:layout_gravity="right|bottom"
+        android:layout_marginBottom="30dp"
+        android:layout_marginEnd="72dp"
+        android:background="@color/colorAccent"
+        android:textColor="@color/white"
+        android:padding="2dp"
+        android:text="0" />
 
 </FrameLayout>
